# Autoware-Sensor-Integration-Simulation

./: README.md  requirements.txt
src/mini_autoware_sensor_pipeline/: CMakeLists.txt  package.xml
src/mini_autoware_sensor_pipeline/launch/: pipeline.launch.py
src/mini_autoware_sensor_pipeline/msg/: DetectedObstacles.msg  Obstacle.msg  RawLidar.msg  VehicleCmd.msg
src/mini_autoware_sensor_pipeline/nodes/: consumer_node.py  control_node.py  driver_node.py  sensor_node.py
